# digimon-digital-card-battle-guide

./: .env  .gitignore  README.md  Thumbnail - Digimon Digital Card Battle Guide.fig  Wireframe - Digimon Digital Card Battle Guide.fig  deploy.md  deployment.md  docker-compose.yml  draft.md
backend/: .dockerignore  .env  .env.development  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: initial_data.py  models.py
backend/app/alembic/versions/: bc28c7ab601f_initialize.py
backend/app/core/: db.py
backend/app/scrapymon/: scrapy.cfg
backend/app/scrapymon/scrapymon/: README.md  items.py  pipelines.py
backend/app/scrapymon/scrapymon/data/: card.csv  sorted_card.csv  sorted_card_for_db.csv
backend/app/scrapymon/scrapymon/spiders/: card_spider.py
backend/script/: pandasmon.sh  scrapymon.sh
backend/scripts/: pandasmon.sh  scrapymon.sh
backend/src/: main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 477e2c386a72_initialize.py  7d91b372c939_initialize.py  dcfe38b8aedc_initialize.py  fdd9ed3be1e2_initialize.py
backend/src/common/: dependencies.py  dependency.py  utils.py
backend/src/config/: db.py  env.py  security.py
backend/src/data/: card.xlsx  ~$card.xlsx
backend/src/domain/: card.py
backend/src/module/pandasmon/: README.md  main.py  summary.py
backend/src/module/pytorchmon/: main.py
backend/src/module/pytorchmon/model/: cardfusion.py
backend/src/pandasmon/: main.py  reference.py
backend/src/pandasmon/data/processed/: cards.csv  (+1 more)
backend/src/pytorchmon/: main.py
backend/src/pytorchmon/dataset/: cardfusion.py
backend/src/pytorchmon/model/: cardfusion.py
backend/src/pytorchmon/notebook/: cardfusion.ipynb
backend/src/pytorchmon/result/: CardFusionModel_gamefaq-526754-24611_lr-0.001_bs-16_epoch-511_acc-0.74.pth.pt
backend/src/route/: card.py
backend/src/scrapymon/scrapymon/: README.md  pipelines.py  temp.py
backend/test/: conftest.py
backend/test/route/: card.py
(+97 files in other folders)
